--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "atropos": "^2.0.2",
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0"
